Remove auth from createUser to create a user from the frontend which has no authentication
